# self-evolution

./: .gitignore  CHANGELOG.md  CHANGELOG_v2.4.md  COMPLETION_REPORT.md  CONTRIBUTING.md  EXECUTION_SUMMARY.md  PUBLISH_CHECKLIST.md  README.md  README_zh.md  RELEASE_REPORT.md  pyproject.toml
src/self_evolution/: __init__.py  ai_attributor.py  auto_consolidator.py  auto_error_catcher.py  auto_optimization_executor.py  auto_pattern_detector.py  auto_session_startup.py  cli.py  evolution_dashboard.py  evolution_memory.py  evolution_tracker.py  learn_from_feedback.py  session_startup_check.py  weekly_review.py
tests/: __init__.py  test_auto_error_catcher.py
